--- a/MCP2515/MCP2515/MCP2515/Debug/Makefile
+++ b/MCP2515/MCP2515/MCP2515/Debug/Makefile
@@ -37,6 +37,7 @@ SUBDIRS :=
 
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
+../Boot.c \
 ../HAL_EXIT.c \
 ../HAL_GPIO.c \
 ../HAL_SPI.c \
@@ -52,6 +53,7 @@ ASM_SRCS +=
 
 
 OBJS +=  \
+Boot.o \
 HAL_EXIT.o \
 HAL_GPIO.o \
 HAL_SPI.o \
@@ -60,6 +62,7 @@ main.o \
 MCP2515.o
 
 OBJS_AS_ARGS +=  \
+Boot.o \
 HAL_EXIT.o \
 HAL_GPIO.o \
 HAL_SPI.o \
@@ -68,6 +71,7 @@ main.o \
 MCP2515.o
 
 C_DEPS +=  \
+Boot.d \
 HAL_EXIT.d \
 HAL_GPIO.d \
 HAL_SPI.d \
@@ -76,6 +80,7 @@ main.d \
 MCP2515.d
 
 C_DEPS_AS_ARGS +=  \
+Boot.d \
 HAL_EXIT.d \
 HAL_GPIO.d \
 HAL_SPI.d \
@@ -97,6 +102,13 @@ LINKER_SCRIPT_DEP+=
 
 
 # AVR32/GNU C Compiler
+./Boot.o: .././Boot.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32a -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega32a" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
 ./HAL_EXIT.o: .././HAL_EXIT.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
